Updated for packaging.

--- a/register-sound-recording--form.html
+++ b/register-sound-recording--form.html
@@ -1324,7 +1324,7 @@
 			this.claimants.push(this.blankClaimant());
 
 			// Set test data
-			this.addTestData();
+			// this.addTestData();
 		}
 	});
 </script>
