--- a/register-sound-recording--form.html
+++ b/register-sound-recording--form.html
@@ -910,7 +910,8 @@
 				</div>
 
 				<div class="form-actions text-center">
-					<button type="submit" class="btn btn-lg btn-primary">Submit <i class="fa fa-check"></i></button>
+					
+					<a href="thank-you.html" class="btn btn-primary btn-lg">Submit <i class="fa fa-check"></i></a>
 				</div>
 			</div>
 		</div>
