Added in the training video stuff and updated a few other things to make it work on my machine.

--- a/index.html
+++ b/index.html
@@ -211,7 +211,23 @@
         <h4 class="modal-title" id="modal-heading-introduction">Welcome to the eCO demo!</h4>
       </div>
       <div class="modal-body">
-        <p>Introduction text...</p>
+        <p>NIC has elected to implement a proof-of-concept frontend prototype of the end-user registration function based on
+				the user stories included in the RFI. This context was selected because it is a high-volume, highly-visible feature
+				of the future Enterprise Copyright System. This demonstration shows what the user experience could be for a registrant
+				coming to the Copyright.gov website and selecting to register their sound recording. The UX offers two modes of operation
+				as described in the RFI user stories — one mode is a simple, multi-step wizard intended for novice filers and the other is
+				a forms-based interface that provides an expedited interface for completing the registration forms. Because this is only
+				a frontend demo, the UX ends with the filing submission and certain steps in the UX have been simplified, such as payment collection.</p>
+
+				<p>NIC produced this prototype in one week. This demonstration shows how NIC uses rapid agile prototyping to our advantage
+				to see how requirements and ideas fit together into something real and tangible, and then iteratively test and refine our
+				design until a viable release candidate is produced. Furthermore, we hope that this UX prototype aids the government in
+				visualizing the user stories that were included in the RFI.</p>
+
+				<p>To use the prototype, please click the "Register My Work" button.  We have only implemented the registration process
+				for a Sound Recording, so select that as the type of registration you wish to file.  By default you will start the process
+				in "Wizard" mode.  If you wish to use the expert user interface, please select "Start in Form View" when selecting the
+				filing type.</p>
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-primary" data-action="saveshown" data-dismiss="modal">Okay</button>
